# django-admin-flexlist

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  tox.ini
demo_project/: manage.py
demo_project/base/static/base/css/: colors.css
demo_project/blog/: admin.py  models.py
demo_project/blog/migrations/: 0001_initial.py
demo_project/contact_messages/: admin.py  apps.py  models.py
demo_project/contact_messages/migrations/: 0001_initial.py
demo_project/demo_project/: asgi.py  settings.py  urls.py  wsgi.py
demo_project/fixtures/: initial_data.json
demo_project/templates/admin/: base_site.html  change_list.html
demo_project/users/: admin.py  models.py
demo_project/users/migrations/: 0001_initial.py
django_admin_flexlist/: __init__.py  admin.py  apps.py  models.py  services.py  stores.py  urls.py  utils.py  views.py
django_admin_flexlist/migrations/: 0001_initial.py
django_admin_flexlist/schemas/: flexlist_config.v0.schema.json
django_admin_flexlist/services/: __init__.py  app_model_list.py  list_display.py
django_admin_flexlist/static/django_admin_flexlist/css/: change_list.css  colors.css
django_admin_flexlist/templates/django_admin_flexlist/: app_index.html  app_index_content.html  app_index_head.html  app_index_script.html  change_list.html  change_list_actions.html  change_list_head.html  change_list_script.html  index.html  index_actions.html  index_head.html
django_admin_flexlist/templates/django_admin_flexlist/components/: edit_layout_button_index.html  edit_layout_button_index_script.html  edit_layout_form.html  edit_layout_form_script.html
scripts/: run_and_test.py
tests/: conftest.py  e2e_test.py
