[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-admin-flexlist"
version = "0.1.0"
description = "A Django extension that allows customizing the admin list view"
authors = [{ name = "rafael-frs-a" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["django", "admin", "list", "view", "list_display", "customization"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "django>=3.2,<=5.2",
]

[project.urls]
Home = "https://github.com/rafael-frs-a/django-admin-flexlist"

[project.optional-dependencies]
dev = [
  "tox~=4.25",
  "ipython~=8.34",
  "black~=25.1",
  "flake8~=7.2",
  "isort~=6.0",
  "mypy~=1.15",
  "django-stubs[compatible-mypy]~=5.1",
  "pytest~=8.3",
  "pytest-playwright~=0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["django_admin_flexlist*"]
exclude = ["demo_project*", "scripts*", "tests*"]
