[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-admin-flexlist"
version = "1.0.1"
description = "A Django extension that allows users to reorder and toggle visibility of admin list view, app index, and dashboard elements"
authors = [{ name = "rafael-frs-a" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["django", "admin", "list view", "app index", "dashboard", "toggle visibility", "reorder elements", "drag and drop", "list_display"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
]
dependencies = [
  "django>=4.1,<=5.2",
]

[project.urls]
Homepage = "https://github.com/rafael-frs-a/django-admin-flexlist"
Documentation = "https://github.com/rafael-frs-a/django-admin-flexlist"
Source = "https://github.com/rafael-frs-a/django-admin-flexlist"

[project.optional-dependencies]
dev = [
  "tox~=4.25",
  "ipython~=8.34",
  "black~=25.1",
  "flake8~=7.2",
  "isort~=6.0",
  "mypy~=1.15",
  "django-stubs[compatible-mypy]~=5.1",
  "pytest~=8.3",
  "pytest-playwright~=0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["django_admin_flexlist*"]
exclude = ["demo_project*", "scripts*", "tests*"]
